Adds support for pipeline virtualization
Adds main, index.js script to function as a feeder for the enrichment. The
config and data file are there to support the feeder script.
Modified README according to the new changes.
Slimmed down enrichment.js a little to make it easier to read.
Added new used node modules to package file.

--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "GFDRR",
   "version": "0.0.1",
   "description": "This is an example enrichment that other members of the GFDRR project can use",
-  "main": "./enrichment.js",
+  "main": "./index.js",
   "author": "Ron Boortman",
   "repository": {
     "type": "git",
     "url": "https://github.com/floodtags/GFDRR"
   },
   "dependencies": {
-    "node-json-rpc": "0.0.1"
+    "ini": "^1.3.4",
+    "node-json-rpc": "0.0.1",
+    "promise": "^7.1.1"
   }
 }
